# learn_ya_speech_kit

./: .dockerignore  .gitignore  Dockerfile  README.md  audio_bot.py  config.json  docker-compose.yml  docker_build.sh  docker_deploy.sh  docker_push.sh  docker_run.sh  learn_ya_speech_kit.py  pyproject.toml  requirements.txt  service-account.json  test_yandex_speechkit.py
example/: example_yandex_gpt.py  key.json  pyproject.toml
