[tool.poetry]
name = "ya-speech-kit"
version = "0.1.0"
description = "Yandex Speech Kit transcription tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
grpcio = "1.59.0"
protobuf = "4.24.3"
yandexcloud = "0.254.0"
tqdm = "4.66.1"
PyYAML = "6.0.1"
soundfile = "0.12.1"
scipy = "1.11.3"
requests = "2.31.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
